Atualização no formato do código para melhor legibilidade

--- a/index.html
+++ b/index.html
@@ -9,17 +9,26 @@
     <li><a href="#skills">Principais habilidades</a></li>
     <li><a href="#anotherskills">Outras habilidades</a></li>
     <li><a href="#yt">O canal do youtube que eu recomendo</a></li>
+    <br>
     <h1>Fernando Dornelles Rocha</h1>
     <img src="/minha_foto.jpeg" alt="Foto Fernando Dornelles Rocha" width="300px" id="fernando">
-    <p><em><s>Fortíssimo candidato a mister mundo</s> Eu mesmo, sendo estudante de desenvolvimento web na Trybe| Fullstack</em></p>
-    <p>Uma pessoa um pouco teimosa, que adora desafios e é muito competitiva. Morando em Taquari, RS - Com certeza uma das cidades mais pacatas da humanidade - e com desejo e sonhos muito grandes para o futuro.</p>
+    <p>
+        <em><s>Fortíssimo candidato a mister mundo</s> Eu mesmo, sendo estudante de desenvolvimento web na Trybe| Fullstack</em>
+    </p>
+    <p>
+        Uma pessoa um pouco teimosa, que adora desafios e é muito competitiva. Morando em Taquari, RS - Com certeza uma das cidades mais pacatas da humanidade - e com desejo e sonhos muito grandes para o futuro.
+    </p>
     <a href="https://www.linkedin.com/in/fernando-dornelles-rocha-3b11b921a/" target="_blank">LinkedIn</a>
-    <br><a href="https://github.com/dornellesfr" target="_blank">GitHub</a>
+    <br>
+    <a href="https://github.com/dornellesfr" target="_blank">GitHub</a>
+    <br>
+    <br>
     <ul id="skills"><h3>Skills que mais me orgulho:</h3>
         <li><strong>Dedicado</strong></li>
         <li>Prestativo</li>
         <li>Inglês Intermediário</li>
     </ul>
+    <br>
     <ul id="anotherskills"><h3>Outras habilidades:</h3>
         <li>Noções de Python</li>
         <li>Git</li>
@@ -31,6 +40,7 @@
         <li>Bem humorado</li>
         <li>Proativo</li>
     </ul>
+    <br>
     <a href="#fernando"><h3>Link para a belezura</h3></a>
     <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank" id="yt"><h3>Melhor canal do Youtube</h3></a>
 </body>
