--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
     <br>
     <br>
     <ul id="skills"><h3>Skills que mais me orgulho:</h3>
-        <li><strong>Dedicado</strong></li>
-        <li>Prestativo</li>
-        <li>Inglês Intermediário</li>
+        <li><strong>Dedicado;</strong></li>
+        <li>Prestativo;</li>
+        <li>Inglês Intermediário.</li>
     </ul>
     <br>
     <ul id="anotherskills"><h3>Outras habilidades:</h3>
-        <li>Noções de Python</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Aprendo muito rápido</li>
-        <li>Pouquinho de HTML</li>
-        <li>Pouquinho de Django</li>
-        <li>Boa gramática</li>
-        <li>Bem humorado</li>
-        <li>Proativo</li>
+        <li>Noções de Python;</li>
+        <li>Git;</li>
+        <li>GitHub;</li>
+        <li>Aprendo muito rápido;</li>
+        <li>Pouquinho de HTML;</li>
+        <li>Pouquinho de Django;</li>
+        <li>Boa gramática;</li>
+        <li>Bem humorado;</li>
+        <li>Proativo.</li>
     </ul>
     <br>
     <a href="#fernando"><h3>Link para a belezura</h3></a>
