inserindo Bulma e ajustando quase tudo

--- a/index.html
+++ b/index.html
@@ -1,75 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Fernando Dornelles Rocha</title>
-    <link rel="stylesheet" type="text/css" href="/style.css">
+  <meta charset="UTF-8">
+  <title>Fernando Dornelles Rocha</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <br>
-    <header id="header">
-        <article class="top-page">
-            <div class="title">
-                <h1>Fernando Dornelles Rocha</h1>
-            </div>
-            <section>
-                <img src="/minha_foto.jpeg" alt="Foto Fernando Dornelles Rocha" width="450px" id="photo">
+  <body class="has-background-grey-dark">
+    <header>
+      <nav class="navbar is-white">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="https://github.com/dornellesfr" target="_blank"><img src="/assets/github-octocat.jpg" alt="github-icon"></a>
+          <a class="navbar-item" href="https://www.linkedin.com/in/fernando-dornelles-rocha-3b11b921a/" target="_blank"><img src="/assets/linkedin.png" alt="linkedin-icon"></a>
+          <a class="navbar-item" href="https://www.instagram.com/dornellesfr/" target="_blank"><img src="/assets/600px-Instagram_icon.png" alt="instagram-icon"></a>
+        </div>
 
-                <h3 class="description">
-                    <em ><s>Fortíssimo candidato a mister mundo</s> Eu mesmo, sendo estudante de desenvolvimento web na Trybe | Fullstack <br> Uma pessoa um pouco teimosa, que adora desafios e é muito competitiva. </em>
-                </h3>
-            </section>
-        </article>
+        <div class="navbar-end">
+          <a href="#profile" class="navbar-item">Home</a>
+          <a href="#about" class="navbar-item">Sobre</a>
+          <a href="#works" class="navbar-item">Trabalhos</a>
+          <a href="#contact" class="navbar-item">Contato</a>
+        </div>
+      </nav>
     </header>
-
-    <main id="main">
-        <div>
-            <p id="bio">
-                RS - Com certeza uma das cidades mais pacatas da humanidade - e com desejo e sonhos muito grandes para o futuro.
-            </p>
-        </div>
-    <div>
-        <h2>Links:</h2>
-        <a href="https://www.linkedin.com/in/fernando-dornelles-rocha-3b11b921a/" target="_blank">LinkedIn</a>
-        <br>
-        <a href="https://github.com/dornellesfr" target="_blank">GitHub</a>
-    </div>
-
-    <br>
-    <br>
-    <div class="listas-nao-ordenada">
-        <div id="best-skills">
-            <ul id="skills" class="my-habilities"><h3>Skills que mais me orgulho:</h3>
-                <li class="odd"><strong>Dedicado;</strong></li>
-                <li>Prestativo;</li>
-                <li class="odd">Inglês Intermediário.</li>
-            </ul>
-        </div>
     
-        <br>
-
-        <div>
-            <ul id="anotherskills" class="my-habilities"><h3>Outras habilidades:</h3>
-                <li class="odd">Noções de Python;</li>
-                <li>Git;</li>
-                <li class="odd">GitHub;</li>
-                <li>Aprendo muito rápido;</li>
-                <li class="odd">Pouquinho de HTML;</li>
-                <li>Pouquinho de Django;</li>
-                <li class="odd">Boa gramática;</li>
-                <li>Bem humorado;</li>
-                <li class="odd">Proativo.</li>
-            </ul>
+    <main>
+      <section class="section is-medium" id="profile">
+        <div class="card" id="img">
+          <div class="card-image">
+            <figure>
+              <img src="/assets/minha_foto.jpeg" alt="Foto Fernando Dornelles Rocha">
+            </figure>
+          </div>
+          <div class="card-content">
+            <h1 class="title has-text-centered has-text-dark">FERNANDO DORNELLES ROCHA</h1>
+            <p class="subtitle has-text-centered has-text-dark">Estudante de desenvolvimento web na Trybe | Fullstack </p>
+          </div>
         </div>
-    </div>
+      </section>
+
+      <section class="section is-medium" id="about">
+        <h1 class="subtitle has-text-centered has-text-light">Fernando Dornelles</h1>
+        <p class="subtitle has-text-centered has-text-light">Estudante de web desenvolvimento, gosto de jogos digitais, boas leituras e pessoas intensas!</p>
+        <article>
+            <h3 class="subtitle has-text-centered has-text-light">Skills</h3>
+              <ul> 
+                <li class="subtitle has-text-centered has-text-light">Dedicado</li>
+                <li class="subtitle has-text-centered has-text-light">JavaScript</li>
+                <li class="subtitle has-text-centered has-text-light">React JS</li>
+                <li class="subtitle has-text-centered has-text-light">RTL</li>
+                <li class="subtitle has-text-centered has-text-light">HTML</li>
+                <li class="subtitle has-text-centered has-text-light">CSS</li>
+                <li class="subtitle has-text-centered has-text-light">Inglês Intermediário</li>
+                <li class="subtitle has-text-centered has-text-light">Git & github</li>
+                <li class="subtitle has-text-centered has-text-light">Noções de Python</li>
+              </ul>
+        </article>
+      </section>
+
+      <section class="section is-medium" id="works">
+        <p class="subtitle has-text-centered has-text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates consequuntur quod soluta! Repellendus, iure, velit minus molestiae beatae, excepturi rerum eaque necessitatibus harum nulla deleniti perspiciatis? Sequi aut inventore doloribus.</p>
+      </section>
+
+      <section class="section is-medium" id="contact">
+        <h2 class="subtitle has-text-centered has-text-light">Links:</h2>
+        <a class="subtitle has-text-centered has-text-light" href="https://www.linkedin.com/in/fernando-dornelles-rocha-3b11b921a/" target="_blank">LinkedIn</a>
+        <a class="subtitle has-text-centered has-text-light" href="https://github.com/dornellesfr" target="_blank">GitHub</a>
+      </section>
+
     </main>
-    <br>
 
-    <div id="links-profile-and-youtube">
-        <a href="#fernando"><h3>Link para a belezura</h3></a>
-        <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank" id="yt"><h3>Melhor canal do Youtube</h3></a>
-    </div>
-    
-</body>
+  </body>
 </html>
