--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./assets/css/works.css">
   <link rel="stylesheet" href="./assets/css/contacts.css">
   <link rel="stylesheet" href="./assets/css/cabecalho.css">
-
+  <script src="./assets/js/animate-scroll.js"></script>
 </head>
   <body>
     <nav class="menu-side">
@@ -58,7 +58,6 @@
             <p >Estudante de desenvolvimento web e bacharel em Direito</p>
         </div>
       </article>
-
       <article  id="about">
         <br>
         <div class="container-about">
@@ -156,7 +155,6 @@
           </section>
         </div>
       </article>
-
       <article id="contact">
         <br>
         <section class="contact-me">
@@ -165,7 +163,6 @@
               <svg width="70" height="3" viewBox="0 0 70 3" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="70" height="3" fill="white"/>
               </svg>
-
             </div>
             <div class="div-form">
               <div class="div-chamada">
